exercicios/kubectl_commands_N_files/traefik_system_svc.yml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: traefik-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
      name: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      tolerations:
        - effect: NoSchedule
          operator: Exists
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:2.5
          name: traefik-ingress-lb
          ports:
            - name: http
              containerPort: 80
            - name: admin
              containerPort: 8080
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - --providers.kubernetesingress=true
            # you need to manually set this IP to the incoming public IP
            # that your ingress resources would use. Note it only affects
            # status and kubectl UI, and doesn't really do anything
            # It could even be left out https://github.com/containous/traefik/issues/6303
            - --providers.kubernetesingress.ingressendpoint.hostname=localhost
            ## the web UI on the host NIC port 8080 in **insecure** mode
            - --api.dashboard=true
            - --api.insecure=true
            - --log=true
            - --log.level=INFO
            - --accesslog=true
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: traefik-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  type: LoadBalancer # required in GCP, the way it is structured
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
