exercicios/kubectl_commands_N_files/traefik_ui_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: traefik-system
spec:
  rules:
    - host: traefik.rancher-server.jchengdev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-web-ui
                port:
                  name: web
